@@ -17,8 +17,9 @@
  343436          0.45837               1         1.0    --     125   2      aMc@Nlo+Pythia8                        ttH125_gamgam  Full  
 
 #ggH VBF
- 341471           30.188               1         1.0    --     125   2              pythia8                        ggH125_ZZ4lep  Fast  
- 341488           3.8299               1         1.0    --     125   2              pythia8                       VBFH125_ZZ4lep  Fast  
+ 341471         0.011823               1         1.0    --     125   2              pythia8                        ggH125_ZZ4lep  Fast  
+ 341488         0.001009               1         1.0    --     125   2              pythia8                       VBFH125_ZZ4lep  Fast  
+
 
 
 
